{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 94,
  "lineage": "ed9a0681-53d4-17c0-15c0-ababbd9975a3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231829596580:security-group/sg-0b0a2a40",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0b0a2a40",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-758d210d"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231829596580:security-group/sg-0b0a2a40",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0b0a2a40",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-758d210d"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231829596580:vpc/vpc-758d210d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-da9fe4b0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-6e9c3916",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-758d210d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-9033bdeb",
            "owner_id": "231829596580",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231829596580:vpc/vpc-758d210d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-da9fe4b0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-6e9c3916",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-758d210d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-9033bdeb",
            "owner_id": "231829596580",
            "state": "available"
          }
        }
      ]
    }
  ]
}